--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="header" style="display: flex; justify-content: center">
+      <a href="/">
+        <img src="/images/header.png" />
+      </a>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
